add getAllBands operation
